--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 
+.drawer-side a.active{
+    color: wheat;
+}
+
+.drawer-side a.active{
+    background-color: transparent;
+} */
